Updated header and intro arrangement to fix recent projects overlapping on larger screens, intro margin tops measured in vh now

--- a/styles.css
+++ b/styles.css
@@ -116,13 +116,13 @@ ul li:first-child {
 
 .intro	{
 	max-width: 550px;
-	margin-top: 250px;
+	margin-top: 35vh;
 	margin-bottom: 150px;
 	padding-top: 0px;
 }
 
 .projects {
-	margin-top: 300px;
+	margin-top: 150px;
 	max-width: 700px;
 	padding-bottom: 200px;
 }
@@ -328,7 +328,9 @@ a.button {
 	}
 
 	.intro {
-		margin-bottom: 100px;
+		max-width: 90vw;
+		margin: 0 auto;
+		margin-top: 250px;
 	}
 
 	.projects {
